# opentelemetry-ebpf-profiler

./: .clang-format  .codespellignore  .codespellrc  .dockerignore  .gitignore  .golangci.yml  AUTHORS  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.golangci-lint  Dockerfile.integration-tests  INSTANA_README.md  KNOWN_KERNEL_LIMITATIONS.md  Makefile  README.md  SECURITY.md  Tiltfile  VERSIONING.md  cli_flags.go  cli_flags_internal.go  go.mod  go.sum  helpers.go  integration-tests.Dockerfile  main.go  main_test.go  test.go  tools.mod  tools.sum
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  integration-test.Dockerfile  renovate.json5
.qwen/: settings.json  settings.json.orig
LICENSES/: fetch-licenses.sh
armhelpers/: arm_helpers.go
colasoft/: controller.go
collector/: .gitignore  README.md  config.go  controller.go  controller_options.go  controller_options_test.go  factory.go  factory_linux.go  factory_linux_test.go  factory_others.go  factory_others_test.go  factory_test.go  generated_component_test.go  generated_package_test.go  metadata.yaml  option_others.go  start_test.go
config/: config.go  config_test.go  env.go  times.go  tracer.go  tracer_test.go
containermetadata/: containermetadata.go  containermetadata_test.go
controller/: config.go  controller.go
customlabelstest/: customlabels_test.go
design-docs/: README.md
doc/: KNOWN_KERNEL_LIMITATIONS.md  gopclntab.md  internals.md
docker-image/: Dockerfile  entrypoint.sh
docs/: gopclntab.md
env/: env.go  env_test.go
extensions/: config.go  instancestubs.go  loaderinfo.go  multi.go  types.go
go_labels/: main.go  main_test.go
host/: host.go
hostmetadata/: collector.go  hostmetadata.json
interpreter/: config.go  instancestubs.go  loaderinfo.go  multi.go  types.go
k8s/: Dockerfile  agent.yaml  kind-cluster.yaml
kallsyms/: bpf.go  bpf_integration_test.go  bpf_platform_linux.go  bpf_platform_unsupported.go  bpf_test.go  kallsyms.go  kallsyms_test.go
legal/: add-non-go.sh  (+3 more)
rust-crates/custom-labels-example/: Cargo.toml  build.rs
rust-crates/custom-labels-example/src/: main.rs
rust-crates/symblib/: Cargo.toml  README.md  build.rs
rust-crates/symblib-capi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
rust-crates/symblib-capi/c/: Makefile  demo.c  symblib.h
rust-crates/symblib-capi/go/: Makefile  main.go
rust-crates/symblib-capi/src/: ffislice.rs  ffistr.rs  gosym.rs  lib.rs  pointresolver.rs  rangeextr.rs  retpadextr.rs  status.rs
rust-crates/symblib/src/: covmap.rs  dbglog.rs  demangle.rs  disas.rs  dwarf.rs  fileid.rs  lib.rs  objfile.rs  retpads.rs
rust-crates/symblib/src/gosym/: errors.rs  mod.rs
rust-crates/symblib/src/gosym/raw/: mod.rs  reader.rs  regions.rs  structs.rs  types.rs
rust-crates/symblib/src/symbconv/: go.rs  mod.rs  multi.rs  obj.rs
rust-crates/symblib/src/symbconv/dwarf/: mod.rs  rangetree.rs
rust-crates/symblib/src/symbfile/: mod.rs  proto.rs  read.rs  records.rs  strdedup.rs  write.rs
rust-crates/symblib/testdata/: Makefile  README.md  go-1.20.14  go-1.22.12  go-1.24.0  go.mod  inline  inline-big-fake-compressed-dwarf  inline-compressed-dwarf  inline-compressed-dwarf-zstd  inline-no-tco  inline-no-tco.ranges.symbfile  inline-split-dwarf  inline-split-dwarf.dwp  inline.c
(+1386 files in other folders)
