[package]
name = "custom-labels-example"
edition = "2021"
# Once we have the Rust workspace stuff from upstream, set these to true.
#
# version.workspace = true
# rust-version.workspace = true
# license.workspace = true

[dependencies]
custom-labels = "0.4.0"
rand = "0.9.0"

[build-dependencies]
custom-labels = "0.4.0"