[package]
name = "symblib-capi"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
symblib.path = "../symblib"
fallible-iterator.workspace = true
thiserror.workspace = true

[build-dependencies]
serde_json = "1.0.140"

[dev-dependencies]
tempfile.workspace = true